force-app/main/default/objects/PriceListLineTier__c/PriceListLineTier__c.object-meta.xml
<CustomObject>
    <label>Price Tier</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Price Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>