force-app/main/default/objects/PriceListLineTier__c/fields/HighestTier__c.field-meta.xml
<CustomField>
    <fullName>HighestTier__c</fullName>
    <formula>OR(ISNULL(UpperBound__c),ISBLANK(UpperBound__c))</formula>
    <label>Highest Tier</label>
    <type>Checkbox</type>
</CustomField>