force-app/main/default/objects/PriceListLineTier__c/fields/LowerBound__c.field-meta.xml
<CustomField>
    <fullName>LowerBound__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lower Bound</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>