force-app/main/default/objects/PriceListLineTier__c/fields/PriceListCountry__c.field-meta.xml
<CustomField>
    <fullName>PriceListCountry__c</fullName>
    <formula>PriceListLine__r.PriceListCountry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List Country</label>
    <type>Text</type>
</CustomField>