force-app/main/default/objects/PriceListLineTier__c/fields/PriceListCustomer__c.field-meta.xml
<CustomField>
    <fullName>PriceListCustomer__c</fullName>
    <formula>PriceListLine__r.PriceListCustomer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List Customer</label>
    <type>Text</type>
</CustomField>