force-app/main/default/objects/PriceListLineTier__c/fields/PriceListLine__c.field-meta.xml
<CustomField>
    <fullName>PriceListLine__c</fullName>
    <label>Price List Line</label>
    <referenceTo>PriceListLine__c</referenceTo>
    <relationshipLabel>Price Tiers</relationshipLabel>
    <relationshipName>PriceTiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>