force-app/main/default/objects/PriceListLineTier__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>CASESAFEID(PriceListLine__r.Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>